[package]
name = "nineclip"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
image = "0.24.9"
clipboard = "0.5"
tao = { version = "0.31.1", features = ["menu", "tray"] }
parking_lot = "0.12.1"

[[bin]]
name = "9clip"
path = "src/main.rs"